# fraud_research_agent

./: .env  .gitignore  main.py  pyproject.toml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  arxiv_results-checkpoint.json  arxiv_results_fraud_2022-checkpoint.json  arxiv_results_fraud_behavior_2000-checkpoint.json  arxiv_results_fraud_behavior_2024-checkpoint.json  main-checkpoint.py
agent/: chain_builder.py  orchestrator.py  paper_classification_agent.py  paper_report_agent.py  paper_search_agent.py
agent/.ipynb_checkpoints/: chain_builder-checkpoint.py  paper_classification_agent-checkpoint.py  paper_report_agent-checkpoint.py  paper_search_agent-checkpoint.py
config/.ipynb_checkpoints/: settings-checkpoint.py
data/processed/: arxiv_results.json  arxiv_results_clean.json
data/processed/.ipynb_checkpoints/: arxiv_results_clean-checkpoint.json
data/raw/.ipynb_checkpoints/: arxiv_results-checkpoint.json
prompts/: __init__.py  auto_clustering_prompt.py  classify_prompt.py  query_prompt.py  report_prompt.py
prompts/.ipynb_checkpoints/: query_prompt-checkpoint.py  report_prompt-checkpoint.py
tools/: arxiv_tool.py  categorization_tool.py  count_tool.py  plot_tool.py  report_tool.py
tools/.ipynb_checkpoints/: arxiv_tool-checkpoint.py
utils/: global_state.py  llm_utils.py
utils/.ipynb_checkpoints/: llm_utils-checkpoint.py
