[project]
name = "fraud-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.2.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-deepseek>=0.1.4",
    "mcp>=1.13.1",
    "openai>=1.106.1",
    "pydantic>=2.11.7",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pytest>=8.4.2",
]
